--- a/app/src/cds/res/layout/app_bar_history.xml
+++ b/app/src/cds/res/layout/app_bar_history.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<AppBar
+<com.google.android.material.appbar.AppBarLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -32,4 +32,4 @@
 
     </androidx.appcompat.widget.Toolbar>
 
-</AppBar>
+</com.google.android.material.appbar.AppBarLayout>
