--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -110,26 +110,37 @@
 
     </LinearLayout>
 
+    <cenergy.central.com.pwb_store.view.PowerBuyTextView
+        android:id="@+id/tvSoldBy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:textColor="@color/nameProductColor"
+        android:textSize="18sp"
+        app:typeFaceAsset="RobotoLight.ttf"
+        android:text="@string/sold_by"
+        app:layout_constraintStart_toEndOf="@id/guideline40"
+        app:layout_constraintTop_toBottomOf="@+id/productIdLayout">
+
+    </cenergy.central.com.pwb_store.view.PowerBuyTextView>
+
     <LinearLayout
         android:id="@+id/productSpacialPriceLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginEnd="16dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/guideline40"
-        app:layout_constraintTop_toBottomOf="@+id/productIdLayout">
+        app:layout_constraintTop_toBottomOf="@+id/tvSoldBy">
 
         <cenergy.central.com.pwb_store.view.PowerBuyTextView
             android:id="@+id/tvTitleSpecialPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingStart="0dp"
-            android:paddingTop="5dp"
-            android:paddingEnd="5dp"
-            android:paddingBottom="5dp"
             android:textColor="@color/specialPriceColor"
             android:textSize="20sp"
             app:typeFaceAsset="RobotoLight.ttf"
@@ -139,7 +150,7 @@
             android:id="@+id/tvSpecialPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="5dp"
+            android:layout_marginStart="5dp"
             android:textColor="@color/specialPriceColor"
             android:textSize="20sp"
             app:typeFaceAsset="Roboto-Medium.ttf"
@@ -151,6 +162,7 @@
         android:id="@+id/productPriceLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="16dp"
         android:orientation="horizontal"
@@ -161,10 +173,6 @@
         <cenergy.central.com.pwb_store.view.PowerBuyTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingStart="0dp"
-            android:paddingTop="5dp"
-            android:paddingEnd="5dp"
-            android:paddingBottom="5dp"
             android:text="@string/regular_price"
             android:textColor="@color/nameProductColor"
             android:textSize="18sp"
@@ -174,7 +182,7 @@
             android:id="@+id/tvNormalPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="5dp"
+            android:layout_marginStart="5dp"
             android:textColor="@color/nameProductColor"
             android:textSize="18sp"
             app:typeFaceAsset="RobotoLight.ttf"
@@ -184,8 +192,8 @@
             android:id="@+id/txt_save"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="5dp"
             android:textColor="@color/powerBuyPurple"
+            android:layout_marginStart="5dp"
             android:textSize="18sp"
             app:typeFaceAsset="RobotoLight.ttf"
             tools:text="Save : ฿1,310 (30%)" />
