--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -66,12 +66,12 @@
         android:id="@+id/shareButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_share"
         android:layout_marginEnd="16dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/app_name"
+        android:src="@drawable/ic_share"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tvProductName"
-        android:contentDescription="@string/app_name" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:id="@+id/productIdLayout"
@@ -94,7 +94,7 @@
             android:textColor="@color/nameProductColor"
             android:textSize="18sp"
             app:typeFaceAsset="RobotoLight.ttf"
-            tools:text="Product Code : " />
+            tools:text="Product Code: " />
 
         <!--<cenergy.central.com.pwb_store.view.PowerBuyTextView-->
         <!--android:id="@+id/txt_stock"-->
@@ -111,26 +111,43 @@
     </LinearLayout>
 
     <cenergy.central.com.pwb_store.view.PowerBuyTextView
-        android:id="@+id/tvSoldBy"
+        android:id="@+id/soldByTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:text="@string/sold_by_title"
         android:textColor="@color/nameProductColor"
         android:textSize="18sp"
-        app:typeFaceAsset="RobotoLight.ttf"
-        android:text="@string/sold_by"
-        app:layout_constraintStart_toEndOf="@id/guideline40"
-        app:layout_constraintTop_toBottomOf="@+id/productIdLayout">
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/tvSoldBy"
+        app:layout_constraintStart_toStartOf="@id/guideline40"
+        app:layout_constraintTop_toBottomOf="@+id/productIdLayout" />
 
-    </cenergy.central.com.pwb_store.view.PowerBuyTextView>
+    <cenergy.central.com.pwb_store.view.PowerBuyTextView
+        android:id="@+id/tvSoldBy"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:textColor="@color/nameProductColor"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:ellipsize="end"
+        android:singleLine="true"
+        android:maxLines="1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/soldByTitle"
+        app:layout_constraintTop_toBottomOf="@+id/productIdLayout"
+        tools:text="POWER BUY" />
 
     <LinearLayout
         android:id="@+id/productSpacialPriceLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
@@ -144,7 +161,7 @@
             android:textColor="@color/specialPriceColor"
             android:textSize="20sp"
             app:typeFaceAsset="RobotoLight.ttf"
-            tools:text="Price : " />
+            tools:text="Price: " />
 
         <cenergy.central.com.pwb_store.view.PowerBuyTextView
             android:id="@+id/tvSpecialPrice"
@@ -162,8 +179,8 @@
         android:id="@+id/productPriceLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
@@ -192,8 +209,8 @@
             android:id="@+id/txt_save"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/powerBuyPurple"
             android:layout_marginStart="5dp"
+            android:textColor="@color/powerBuyPurple"
             android:textSize="18sp"
             app:typeFaceAsset="RobotoLight.ttf"
             tools:text="Save : ฿1,310 (30%)" />
@@ -345,7 +362,7 @@
             android:id="@+id/layoutBottomButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:constraint_referenced_ids="availableStoreButton,addToCompareButton"/>
+            app:constraint_referenced_ids="availableStoreButton,addToCompareButton" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
