--- a/app/src/main/res/layout/list_header_item_shopping_cart.xml
+++ b/app/src/main/res/layout/list_header_item_shopping_cart.xml
@@ -6,35 +6,35 @@
     android:layout_height="wrap_content">
 
     <cenergy.central.com.pwb_store.view.PowerBuyTextView
-        android:id="@+id/headerTitle"
+        android:id="@+id/soldByTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        android:text="@string/sold_by"
+        android:textColor="@color/nameProductColor"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:text="@string/sold_by_title" />
 
     <cenergy.central.com.pwb_store.view.PowerBuyTextView
-        android:id="@+id/txtHeader"
-        style="@style/descriptionProduct"
-        android:layout_width="wrap_content"
+        android:id="@+id/tvSoldBy"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        android:textSize="20sp"
+        android:layout_marginEnd="8dp"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:singleLine="true"
+        android:textColor="@color/nameProductColor"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/headerTitle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/soldByTitle"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="@string/app_name" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/lightGray"
-        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
