Fix hide price and set explain to default on PDP

--- a/app/src/pwbOmniTV/res/layout/fragment_detail.xml
+++ b/app/src/pwbOmniTV/res/layout/fragment_detail.xml
@@ -112,7 +112,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/productSpacialPriceLayout"
+        android:id="@+id/productCompareLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -134,6 +134,21 @@
             android:layout_marginEnd="4dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/productSpacialPriceLayout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:orientation="horizontal"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/guideline40"
+        app:layout_constraintTop_toBottomOf="@+id/productCompareLayout">
 
         <cenergy.central.com.pwb_store.view.PowerBuyTextView
             android:id="@+id/tvTitleSpecialPrice"
