--- a/app/src/pwbOmniTV/res/layout/app_bar_main.xml
+++ b/app/src/pwbOmniTV/res/layout/app_bar_main.xml
@@ -36,6 +36,14 @@
             android:layout_gravity="end|center_vertical"
             android:layout_margin="8dp" />
 
+        <cenergy.central.com.pwb_store.view.PowerBuyCompareView
+            android:id="@+id/button_compare"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_gravity="end|center_vertical"
+            android:layout_marginEnd="10dp" />
+
     </androidx.appcompat.widget.Toolbar>
 
 </com.google.android.material.appbar.AppBarLayout>
