--- a/app/src/main/res/layout/fragment_payment_billing.xml
+++ b/app/src/main/res/layout/fragment_payment_billing.xml
@@ -252,7 +252,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_padding_small"
             android:layout_marginEnd="@dimen/margin_padding_small"
-            app:header="@string/tel_or_mobile"
+            app:header="@string/contact_number_reserve"
             app:layout_constraintEnd_toStartOf="@+id/guildHalf"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/input_sub_district"
