--- a/app/src/main/res/layout/fragment_payment_select_methods.xml
+++ b/app/src/main/res/layout/fragment_payment_select_methods.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/white">
 
     <cenergy.central.com.pwb_store.view.PowerBuyTextView
@@ -23,5 +24,6 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title_select_methods" />
+        app:layout_constraintTop_toBottomOf="@+id/title_select_methods"
+        tools:listitem="@layout/list_item_pay_by_other"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
