--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -29,4 +29,5 @@
     <dimen name="margin_padding_large">24dp</dimen>
     <dimen name="margin_padding_xlarge">32dp</dimen>
     <dimen name="share_menu_size">80dp</dimen>
+    <dimen name="ic_payment_agent_size">36dp</dimen>
 </resources>
