--- a/app/src/main/res/layout/fragment_payment_transfers.xml
+++ b/app/src/main/res/layout/fragment_payment_transfers.xml
@@ -44,7 +44,10 @@
         android:id="@+id/agentRecycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/margin_padding_small"
+        android:paddingTop="@dimen/margin_padding_normal"
+        android:paddingStart="@dimen/margin_padding_small"
+        android:paddingEnd="@dimen/margin_padding_small"
+        android:paddingBottom="@dimen/margin_padding_small"
         app:layout_constraintTop_toBottomOf="@+id/paymentTransferTabLayout" />
 
     <cenergy.central.com.pwb_store.view.PowerBuyAutoCompleteTextStroke
@@ -99,6 +102,7 @@
         app:required="true" />
 
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/payNowButton"
         style="@style/Button.Primary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
