--- a/app/src/main/res/layout/fragment_payment_success.xml
+++ b/app/src/main/res/layout/fragment_payment_success.xml
@@ -148,6 +148,16 @@
         <!-- endregion -->
 
         <!-- region click to open bill -->
+        <cenergy.central.com.pwb_store.view.PowerBuyTextView
+            android:id="@+id/tvPayBillDescription"
+            style="@style/TextAppearance.AppCompat.Small"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/margin_padding_normal"
+            android:text="@string/order_click_bill_description"
+            android:visibility="gone" />
+
         <LinearLayout
             android:id="@+id/orderPayBillButton"
             android:layout_width="@dimen/img_qr_code_payment"
