--- a/app/src/main/res/layout/fragment_payment_transfers.xml
+++ b/app/src/main/res/layout/fragment_payment_transfers.xml
@@ -61,8 +61,7 @@
                 android:paddingStart="@dimen/margin_padding_small"
                 android:paddingTop="@dimen/margin_padding_normal"
                 android:paddingEnd="@dimen/margin_padding_small"
-                android:paddingBottom="@dimen/margin_padding_small"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"/>
 
             <cenergy.central.com.pwb_store.view.PowerBuyTextView
                 android:id="@+id/errorAgentTextView"
@@ -71,7 +70,7 @@
                 android:layout_marginStart="@dimen/margin_padding_normal"
                 android:text="@string/error_form_input_required"
                 android:textColor="@color/dangerColor"
-                android:visibility="invisible"
+                android:visibility="gone"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/agentRecycler" />
 
@@ -80,7 +79,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_padding_normal"
-                android:layout_marginTop="@dimen/margin_padding_small"
+                android:layout_marginTop="@dimen/margin_padding_large"
                 android:layout_marginEnd="@dimen/margin_padding_normal"
                 app:act_header="@string/payment_channel"
                 app:act_required="true"
