--- a/app/src/main/res/layout/list_item_search.xml
+++ b/app/src/main/res/layout/list_item_search.xml
@@ -54,6 +54,7 @@
         android:layout_centerInParent="true"
         android:layout_marginEnd="10dp"
         android:padding="6dp"
+        android:visibility="gone"
         android:src="@drawable/ic_barcode_scan"
         android:background="?android:attr/selectableItemBackground"
         android:contentDescription="@string/app_name" />
