--- a/app/src/main/res/layout/item_compare_product_item.xml
+++ b/app/src/main/res/layout/item_compare_product_item.xml
@@ -1,86 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view_grid"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
-    android:padding="4dp"
     android:orientation="horizontal"
+    android:padding="4dp"
     app:cardBackgroundColor="@android:color/white"
     app:cardCornerRadius="0dp"
-    app:cardUseCompatPadding="true"
-    app:cardElevation="0dp">
+    app:cardElevation="0dp"
+    app:cardUseCompatPadding="true">
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layout_card"
         android:layout_width="match_parent"
-        android:layout_height="269dp"
+        android:layout_height="wrap_content"
         android:background="?android:attr/selectableItemBackground">
 
-        <LinearLayout
-            android:id="@+id/layout_image_view"
-            android:layout_marginLeft="6dp"
-            android:layout_marginRight="6dp"
-            android:layout_marginTop="6dp"
-            android:layout_centerHorizontal="true"
+        <ImageView
+            android:id="@+id/img_product"
             android:layout_width="164dp"
             android:layout_height="164dp"
-            android:orientation="vertical">
-
-
-            <ImageView
-                android:id="@+id/img_product"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="10dp"
-                android:src="@drawable/ic_placeholder"
-                android:contentDescription="@string/app_name" />
-
-        </LinearLayout>
+            android:layout_margin="@dimen/margin_padding_normal"
+            android:contentDescription="@string/app_name"
+            android:padding="10dp"
+            android:src="@drawable/ic_placeholder"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/img_cancel"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:layout_alignParentEnd="true"
+            android:layout_margin="@dimen/margin_padding_small"
             android:background="?android:attr/selectableItemBackground"
+            android:contentDescription="@string/app_name"
             android:src="@drawable/ic_cancel_copy"
-            android:contentDescription="@string/app_name" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <cenergy.central.com.pwb_store.view.PowerBuyTextView
+            android:id="@+id/txt_product_description"
+            style="@style/TextAppearance.MaterialComponents.Body1"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:layout_below="@+id/layout_image_view"
-            android:gravity="center"
-            android:orientation="vertical">
+            android:layout_marginTop="@dimen/margin_padding_large"
+            android:ellipsize="end"
+            android:gravity="center_horizontal"
+            android:maxLines="2"
+            android:minLines="2"
+            android:textColor="@color/nameProductColor"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/img_product"
+            tools:text="iPhone SE MLXN2TH/A" />
 
-            <cenergy.central.com.pwb_store.view.PowerBuyTextView
-                android:id="@+id/txt_product_description"
-                style="@style/TextAppearance.MaterialComponents.Body1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:gravity="center_horizontal"
-                android:maxLines="2"
-                android:minLines="2"
-                android:textColor="@color/nameProductColor"
-                tools:text="iPhone SE MLXN2TH/A"/>
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnAddToCart"
+            style="@style/Button.Primary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_padding_normal"
+            android:text="@string/add_to_cart"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txt_product_description" />
 
-            <Button
-                android:id="@+id/btnAddToCart"
-                style="@style/Button.Primary"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingStart="16dp"
-                android:paddingEnd="16dp"
-                android:layout_marginTop="8dp"
-                android:text="@string/add_to_cart"/>
-        </LinearLayout>
-
-    </RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
