--- a/app/src/pwb/res/xml/remote_config_defaults.xml
+++ b/app/src/pwb/res/xml/remote_config_defaults.xml
@@ -22,7 +22,7 @@
 
     <entry>
         <key>supported_payment_methods</key>
-        <value>fullpaymentredirect,payatstore,p2c2p_ipp,e_ordering</value>
+        <value>fullpaymentredirect,payatstore,p2c2p_ipp,cashondelivery,e_ordering</value>
     </entry>
 
     <entry>
