--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
 <resources>
     <!-- Drawer -->
     <dimen name="drawer_header_height">50dp</dimen>
+    <dimen name="drawer_user_height">130dp</dimen>
 
     <dimen name="textBannerTopMargin">18dp</dimen>
     <dimen name="recycler_view_content_horizontal_padding">9dp</dimen>
