--- a/app/src/pwbOmniTv/res/layout/fragment_detail.xml
+++ b/app/src/pwbOmniTv/res/layout/fragment_detail.xml
@@ -188,6 +188,7 @@
         android:gravity="center_vertical"
         android:text="@string/available_here"
         android:textColor="@color/inStockColor"
+        android:visibility="gone"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/guideline40"
