--- a/app/src/main/res/layout/fragment_product_overview.xml
+++ b/app/src/main/res/layout/fragment_product_overview.xml
@@ -6,8 +6,7 @@
     android:layout_height="wrap_content"
     android:background="@color/white"
     android:focusableInTouchMode="true"
-    android:orientation="vertical"
-    android:paddingBottom="16dp">
+    android:orientation="vertical">
 
     <!--Key Features-->
     <LinearLayout
