--- a/app/src/main/res/layout/drawer_item.xml
+++ b/app/src/main/res/layout/drawer_item.xml
@@ -1,24 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="48dp"
+    android:layout_height="wrap_content"
     android:padding="16dp"
     android:background="?attr/selectableItemBackground">
 
     <ImageView
         android:id="@+id/icon"
         android:layout_width="24dp"
-        android:layout_height="24dp" />
+        android:layout_height="24dp"
+        android:contentDescription="@string/app_name" />
 
     <cenergy.central.com.pwb_store.view.PowerBuyTextView
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/nameProductColor"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="@dimen/margin_padding_normal"
+        android:maxLines="2"
+        android:ellipsize="end"
         app:typeFaceAsset="RobotoLight.ttf"/>
 
 </LinearLayout>
