--- a/app/src/pwbOmniTv/res/layout/fragment_detail.xml
+++ b/app/src/pwbOmniTv/res/layout/fragment_detail.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:focusableInTouchMode="true"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
@@ -69,6 +70,7 @@
         android:layout_marginEnd="@dimen/margin_padding_normal"
         android:contentDescription="@string/app_name"
         android:src="@drawable/ic_share"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tvProductName"
         app:layout_constraintTop_toTopOf="parent" />
@@ -106,6 +108,7 @@
         android:layout_marginTop="@dimen/margin_padding_small"
         android:layout_marginEnd="@dimen/margin_padding_normal"
         android:orientation="horizontal"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/guideline40"
         app:layout_constraintTop_toBottomOf="@+id/productIdLayout">
@@ -140,6 +143,7 @@
         android:layout_marginTop="@dimen/margin_padding_small"
         android:layout_marginEnd="@dimen/margin_padding_normal"
         android:orientation="horizontal"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/guideline40"
         app:layout_constraintTop_toBottomOf="@+id/productSpacialPriceLayout">
@@ -202,6 +206,7 @@
         android:layout_marginEnd="@dimen/margin_padding_small"
         android:layout_marginTop="@dimen/margin_padding_xlarge"
         app:btn_default="true"
+        android:visibility="gone"
         app:layout_constraintStart_toEndOf="@+id/guideline40"
         app:layout_constraintStart_toStartOf="@+id/guideline40"
         app:layout_constraintEnd_toEndOf="@id/guideline70"
