EOR-130 implement show top of compare bar and adjust alert text cleared compare products

--- a/app/src/main/res/layout/fragment_search_suggestion.xml
+++ b/app/src/main/res/layout/fragment_search_suggestion.xml
@@ -20,6 +20,7 @@
         android:textAllCaps="true"
         android:textColor="@color/headerTextColor"
         android:textColorHint="@color/hintColor"
+        android:textCursorDrawable="@drawable/custom_cursor"
         android:textSize="20sp"
         app:layout_constraintEnd_toStartOf="@+id/image_view_barcode"
         app:layout_constraintStart_toStartOf="parent"
