--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -7,16 +7,17 @@
     <include
         android:id="@+id/layout_app_bar"
         layout="@layout/app_bar_payment"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <FrameLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/productCompareView"
         app:layout_constraintTop_toBottomOf="@+id/layout_app_bar" />
 
     <cenergy.central.com.pwb_store.view.NetworkStateView
@@ -26,6 +27,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/layout_app_bar" />
+
+    <cenergy.central.com.pwb_store.view.ProductCompareView
+        android:id="@+id/productCompareView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
     <cenergy.central.com.pwb_store.view.VersionWatermarkView
         android:id="@+id/watermarkView"
