EOR-130 update margin of clear all button

--- a/app/src/main/res/layout/widget_product_compare_view.xml
+++ b/app/src/main/res/layout/widget_product_compare_view.xml
@@ -51,6 +51,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/margin_padding_normal"
+            android:layout_marginTop="@dimen/margin_padding_normal"
+            android:layout_marginBottom="@dimen/margin_padding_normal"
             android:text="@string/compare_clear_all"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
