--- a/app/src/main/res/layout/fragment_search_suggestion.xml
+++ b/app/src/main/res/layout/fragment_search_suggestion.xml
@@ -15,8 +15,8 @@
         android:hint="@string/search_hint"
         android:imeOptions="actionSearch"
         android:inputType="textFilter"
-        android:padding="@dimen/margin_padding_xsmall"
         android:maxLines="1"
+        android:padding="@dimen/margin_padding_xsmall"
         android:textAllCaps="true"
         android:textColor="@color/headerTextColor"
         android:textColorHint="@color/hintColor"
@@ -45,6 +45,8 @@
         android:layout_height="0dp"
         android:layout_marginTop="@dimen/margin_padding_normal"
         android:background="@android:color/white"
+        android:clipToPadding="false"
+        android:paddingBottom="@dimen/app_bottom_bar_size"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
